# thermal-scope

./: .gitignore  Config.in  README.md  thermal-scope.mk
src/: CMakeLists.txt
src/application/: Reticle.cpp  Reticle.h  ThermalScopeApplication.cpp  ThermalScopeApplication.h  VideoOverlay.cpp  VideoOverlay.h  main.cpp
src/camera-interface/: P2ProManager.cpp  P2ProManager.h  UsbControl.cpp  UsbControl.h  Webcam.cpp  Webcam.h
src/common/: CommonDefs.h
src/hw/: Encoder.cpp  Encoder.h  FrameBuffer.cpp  FrameBuffer.h  GpioWatcher.cpp  GpioWatcher.h
src/utils/: DelayedWriter.cpp  DelayedWriter.h  Logger.cpp  Logger.h  PersistentValue.h  Utils.h
